Hopefully fixed the canvas gap on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -23,11 +23,11 @@ body {
     font-size: 1rem;
 
     @media screen and (max-width: 768px) {
-        font-size: 0.9rem;
+        font-size: 0.95rem;
     }
 
     @media screen and (max-width: 640px) {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 }
 
